# sol-p4-tools

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
example/: index.html  package.json  vite.config.ts
example/src/: main.ts
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/src/: lib.rs  main.rs
src/: diagnostics.rs  lib.rs  metadata_io.rs  p4.rs  partition.rs  workspace.rs
ts/: package.json  vitest.config.ts
ts/src/: index.ts  p4-client.ts
