[package]
name = "sol-p4-tools"
version = "0.2.0"
edition = "2021"
description = "Perforce (P4) integration toolkit for Tauri v2 apps"
repository = "https://github.com/alt9github/sol-p4-tools"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tauri = { version = "2", features = [] }
