[package]
name = "sol-p4-tools-example"
version = "0.0.0"
edition = "2021"

[lib]
name = "sol_p4_tools_example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sol-p4-tools = { path = "../.." }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
